--- a/eternaldle.html
+++ b/eternaldle.html
@@ -13,7 +13,7 @@
             --header-bg: #1a1a1b;
 
             /* Status Colors */
-            --incorrect-bg: #3a3a3c;
+            --incorrect-bg: #d9534f;
             --partial-bg: #b59f3b;
             --correct-bg: #538d4e;
             --error-bg: #d9534f;
@@ -169,7 +169,8 @@
     <div class="container">
         <header>
             <h1>Adivinhe o Personagem</h1>
-            <p id="debug-solution" style="color: #ffcc00; font-size: 0.9rem; min-height: 1.2rem;"></p>
+            <!-- Elemento para exibir a solução para fins de teste -->
+            <!-- <p id="debug-solution" style="color: #ffcc00; font-size: 0.9rem; min-height: 1.2rem;"></p> -->
         </header>
 
         <form id="guess-form" autocomplete="off">
@@ -223,10 +224,6 @@
                 characterNames = data.characterNames.map(name => name.trim());
                 
                 characterDatalist.innerHTML = characterNames.map(name => `<option value="${name}"></option>`).join('');
-
-                if (data.solutionForTesting) {
-                    document.getElementById('debug-solution').textContent = `(Para Teste) Solução: ${data.solutionForTesting}`;
-                }
 
             } catch (error) {
                 console.error("Erro de Inicialização:", error);
