--- a/eternaldle.html
+++ b/eternaldle.html
@@ -11,7 +11,12 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #1a1a1d;
+            /* Use the supplied Hero image with a dark overlay for legibility */
+            background-image: linear-gradient(rgba(10,10,12,0.65), rgba(10,10,12,0.65)), url('https://xboxwire.thesourcemediaassets.com/sites/2/2021/09/HeroImage.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            min-height: 100vh;
             color: #e2e2e2;
         }
         .correct-bg { background-color: #2a9d8f; }
