--- a/eternaldle.html
+++ b/eternaldle.html
@@ -11,7 +11,6 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            /* Use the supplied Hero image with a dark overlay for legibility */
             background-image: linear-gradient(rgba(10,10,12,0.65), rgba(10,10,12,0.65)), url('https://xboxwire.thesourcemediaassets.com/sites/2/2021/09/HeroImage.jpg');
             background-size: cover;
             background-position: center;
@@ -20,9 +19,9 @@
             color: #e2e2e2;
         }
         .correct-bg { background-color: #2a9d8f; }
-        .partial-bg { background-color: #e9c46a; }
-        .incorrect-bg { background-color: #e76f51; }
-        .higher-bg, .lower-bg { background-color: #f4a261; }
+        .partial-bg { background-color: #ece932; }
+        .incorrect-bg { background-color: #af1f1f; }
+        .higher-bg, .lower-bg { background-color: #f16f05; }
         .toast {
             position: fixed;
             bottom: 20px;
