--- a/eternaldle.html
+++ b/eternaldle.html
@@ -8,64 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-image: linear-gradient(rgba(10,10,12,0.65), rgba(10,10,12,0.65)), url('https://xboxwire.thesourcemediaassets.com/sites/2/2021/09/HeroImage.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            min-height: 100vh;
-            color: #e2e2e2;
-        }
-        .correct-bg { background-color: #2a9d8f; }
-        .partial-bg { background-color: #ece932; }
-        .incorrect-bg { background-color: #af1f1f; }
-        .higher-bg, .lower-bg { background-color: #f16f05; }
-        .toast {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 12px 24px;
-            border-radius: 8px;
-            color: #1a1a1d;
-            font-weight: 500;
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.3s, visibility 0.3s;
-            z-index: 1000;
-        }
-        .toast.show {
-            opacity: 1;
-            visibility: visible;
-        }
-        .toast.success { background-color: #c7c7c7; }
-        .toast.error { background-color: #e76f51; }
-        .character-image {
-            width: 60px;
-            height: 60px;
-            object-fit: cover;
-            border-radius: 8px;
-            background-color: #2c2c31;
-        }
-        #characterInput {
-            background-color: #2c2c31;
-            border: 1px solid #4a4a52;
-        }
-        #characterInput:focus {
-            outline: none;
-            border-color: #7a7a85;
-            box-shadow: 0 0 0 2px rgba(90, 90, 100, 0.5);
-        }
-        .win-message {
-            animation: fadeIn 0.5s ease-in-out;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-    </style>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body class="flex flex-col items-center min-h-screen p-4">
 
