--- a/eternaldle.html
+++ b/eternaldle.html
@@ -13,7 +13,7 @@
 <body class="flex flex-col items-center min-h-screen p-4">
 
     <div class="w-full max-w-4xl mx-auto">
-        <h1 class="text-4xl font-bold text-center mb-2">Eternaldle</h1>
+        <h1 class="text-4xl font-bold text-center mb-2 site-title">Eternaldle</h1>
         <p class="text-center text-gray-400 mb-6">Adivinhe o personagem de hoje!</p>
         
         <div id="game-container" class="mb-6">
