--- a/eternaldle.html
+++ b/eternaldle.html
@@ -146,7 +146,7 @@
             btn.id = 'shareDiscordButton';
             btn.type = 'button';
             btn.className = 'mt-4 bg-[#5865F2] hover:bg-[#4b54d6] text-white font-bold py-2 px-4 rounded-md transition-colors';
-            btn.textContent = 'Compartilhar no Discord';
+            btn.textContent = 'Compartilhar';
 
             btn.addEventListener('click', async () => {
                 const text = getShareText();
@@ -407,4 +407,5 @@
     </script>
 </body>
 </html>
+
 
