Fix HTML encoding issues in eternaldle.html

--- a/eternaldle.html
+++ b/eternaldle.html
@@ -183,7 +183,7 @@
             shareWrap.appendChild(createShareButton());
             const small = document.createElement('p');
             small.className = 'mt-2 text-gray-300 text-sm text-center';
-            small.textContent = 'Clique em "Compartilhar no Discord" para copiar o resumo (🟩=correto, 🟨=parcial/maior/menor, 🟥=incorreto) — um quadrado por atributo: nome, gênero, classe, alcance, cabelo, lançamento, armas.';
+            small.textContent = 'Clique em "Compartilhar" para copiar o resumo (🟩=correto, 🟨=parcial/maior/menor, 🟥=incorreto) — um quadrado por atributo: nome, gênero, classe, alcance, cabelo, lançamento, armas.';
             shareWrap.appendChild(small);
             winMessageContainer.appendChild(shareWrap);
             winMessageContainer.classList.remove('hidden');
@@ -407,5 +407,6 @@
     </script>
 </body>
 </html>
+
 
 
